Upgrade npm packages

--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
 	},
 	"homepage": "https://github.com/dafiulh/vredeburg#readme",
 	"devDependencies": {
-		"@11ty/eleventy": "^0.11.1",
+		"@11ty/eleventy": "^1.0.0",
 		"@tailwindcss/typography": "^0.3.1",
 		"cross-env": "^7.0.3",
-		"eleventy-plugin-tailwindcss": "^0.3.0",
 		"html-minifier": "^4.0.0",
 		"luxon": "^1.24.1",
 		"rimraf": "^3.0.2",
 		"terser": "^4.8.0"
+	},
+	"dependencies": {
+		"@11ty/eleventy-upgrade-help": "^1.0.1",
+		"@tailwindcss/forms": "^0.2.1",
+		"eleventy-plugin-tailwindcss": "github:dafiulh/eleventy-plugin-tailwindcss"
 	}
 }
