--- a/.github/workflows/broken-links-crawler.yml
+++ b/.github/workflows/broken-links-crawler.yml
@@ -1,7 +1,7 @@
-- name: Broken-Links-Crawler
-  uses: ScholliYT/Broken-Links-Crawler-Action@v3.2.1
-  with:
-    website_url: "https://keymapdb.com"
-    exclude_url_prefix: "https://keymapdb.com/assets/"
-    max_retries: 2
-    max_depth: 2
+name: Broken-Links-Crawler
+uses: ScholliYT/Broken-Links-Crawler-Action@v3.2.1
+ with:
+   website_url: "https://keymapdb.com"
+   exclude_url_prefix: "https://keymapdb.com/assets/"
+   max_retries: 2
+   max_depth: 2
