--- a/.github/workflows/broken-links-crawler.yml
+++ b/.github/workflows/broken-links-crawler.yml
@@ -19,7 +19,7 @@ jobs:
       uses: ScholliYT/Broken-Links-Crawler-Action@v3.3.1
       with:
         website_url: "https://keymapdb.com"
-        exclude_url_prefix: '/assets'
+        exclude_url_prefix: "/assets,https://mechdb.net"
         max_retries: 2
         max_depth: 2
         verbose: true
